--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
